--- a/helper/src/main/resources/templates/question/nav.html
+++ b/helper/src/main/resources/templates/question/nav.html
@@ -10,10 +10,19 @@
 				</ol>
 				<h6 class="font-weight-bolder mb-0">유지보수 게시판</h6>
 			</nav>
-			<form action="" method="get">
+			<form id="search" action="" method="get">
 	        	<div th:if="${#authentication.authorities[0].toString().equals('admin')}" class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar" style="display:inline-block !important;">
 	        		<div class="ms-md-auto pe-md-3 d-flex align-items-center">
 	            		<div class="input-group">
+	            			<input type="hidden" id="page" name="page" value=""/>
+	            			<select id="status" name="status" class="form-control">
+                           		<option th:value="null" th:text="선택"/>
+                           		<option th:each="status : ${status}" 
+                           				th:value="${status}"
+                           				th:text="${status}"
+                           				th:selected="${status} == ${search.status}"
+                           				/>
+                           	</select>
 	              			<span class="input-group-text text-body"><i class="fas fa-search" aria-hidden="true"></i></span>
 	              			<input type="text" name="companyName" class="form-control" placeholder="소속 검색" th:value="${search.companyName}">
 	            		</div>
@@ -23,5 +32,11 @@
 	    	</form>
 	    		
 		</div>
+		<script>
+		document.querySelector('#status').addEventListener('change', function(){
+			document.querySelector('#search').submit();
+		})
+		</script>
 	</nav>
+	
 </html>
