spring security 권한 체크 설정

--- a/helper/src/main/resources/templates/question/questionList.html
+++ b/helper/src/main/resources/templates/question/questionList.html
@@ -91,6 +91,7 @@
                             <div style="margin-left: 10px;" th:text="'총 : '+ ${questions.totalElements} + '건'">
                             	
                             </div>
+                            <!-- <div th:if="${questions.totalElements} > ${questions.pageable.pageSize}">-->
                             <div>
                             	<nav aria-label="Page navigation example"
                             		th:with="
