--- a/helper/src/main/resources/templates/question/nav.html
+++ b/helper/src/main/resources/templates/question/nav.html
@@ -11,7 +11,7 @@
 				<h6 class="font-weight-bolder mb-0">유지보수 게시판</h6>
 			</nav>
 			<form id="search" action="" method="get">
-	        	<div th:if="${#authentication.authorities[0].toString().equals('admin')}" class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar" style="display:inline-block !important;">
+	        	<div sec:authorize="hasRole('ROLE_ADMIN')" class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar" style="display:inline-block !important;">
 	        		<div class="ms-md-auto pe-md-3 d-flex align-items-center">
 	            		<div class="input-group">
 	            			<input type="hidden" id="page" name="page" value=""/>
