--- a/helper/src/main/resources/templates/question/aside.html
+++ b/helper/src/main/resources/templates/question/aside.html
@@ -28,7 +28,7 @@
                                 </g>
                             </svg>
                         </div>
-                        <span class="nav-link-text ms-1">고객 유지보수 요청</span>
+                        <span class="nav-link-text ms-1">고객 요청</span>
                     </a>
                 </li>
                 <li class="nav-item mt-3">
