--- a/helper/src/main/resources/templates/question/nav.html
+++ b/helper/src/main/resources/templates/question/nav.html
@@ -6,9 +6,9 @@
 			<nav aria-label="breadcrumb">
 				<ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
 					<li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Pages</a></li>
-					<li class="breadcrumb-item text-sm text-dark active" aria-current="page">유지보수 게시판</li>
+					<li class="breadcrumb-item text-sm text-dark active" aria-current="page">고객 게시판</li>
 				</ol>
-				<h6 class="font-weight-bolder mb-0">유지보수 게시판</h6>
+				<h6 class="font-weight-bolder mb-0">질의 게시판</h6>
 			</nav>
 			<form id="search" action="" method="get">
 	        	<div sec:authorize="hasRole('ROLE_ADMIN')" class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar" style="display:inline-block !important;">
