--- a/helper/src/main/resources/templates/auth/loginForm.html
+++ b/helper/src/main/resources/templates/auth/loginForm.html
@@ -81,10 +81,11 @@
                                             	th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
                                             <p class="red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">error layout</p>
                                         </div>
-                                        <!--<div class="form-check form-switch">
-                                             <input class="form-check-input" type="checkbox" id="rememberMe" checked=""> 
+                                        <div class="form-check form-switch">
+                                             <input class="form-check-input" type="checkbox" id="rememberMe" name="rememberMe"> 
                                             <label class="form-check-label" for="rememberMe">Remember me</label>
-                                        </div>-->
+                                        </div>
+                                        <p class="red" th:text="${#request.getAttribute('msg')}"></p>
                                         <div class="text-center">
                                             <input type="submit" value="로그인" class="btn bg-gradient-info w-100 mt-4 mb-0">
                                         </div>
